; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kalloc.c_OSMalloc_nowait.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_kalloc.c_OSMalloc_nowait.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@OSMT_PAGEABLE = common dso_local global i32 0, align 4
@VM_KERN_MEMORY_KALLOC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @OSMalloc_nowait(i64 %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i8* null, i8** %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32, i32* @OSMT_PAGEABLE, align 4
  %11 = and i32 %9, %10
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %28

14:                                               ; preds = %2
  %15 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %16 = call i32 @OSMalloc_Tagref(%struct.TYPE_5__* %15)
  %17 = load i64, i64* %4, align 8
  %18 = trunc i64 %17 to i32
  %19 = load i32, i32* @VM_KERN_MEMORY_KALLOC, align 4
  %20 = call i8* @kalloc_noblock_tag_bt(i32 %18, i32 %19)
  store i8* %20, i8** %6, align 8
  %21 = load i8*, i8** %6, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %23, label %26

23:                                               ; preds = %14
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %25 = call i32 @OSMalloc_Tagrele(%struct.TYPE_5__* %24)
  br label %26

26:                                               ; preds = %23, %14
  %27 = load i8*, i8** %6, align 8
  store i8* %27, i8** %3, align 8
  br label %28

28:                                               ; preds = %26, %13
  %29 = load i8*, i8** %3, align 8
  ret i8* %29
}

declare dso_local i32 @OSMalloc_Tagref(%struct.TYPE_5__*) #1

declare dso_local i8* @kalloc_noblock_tag_bt(i32, i32) #1

declare dso_local i32 @OSMalloc_Tagrele(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
